Gradle properties finished!